# django-admin-views

./: .gitignore  AUTHORS.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  RELEASES.txt  pyproject.toml  runtests.py  setup.py
.github/workflows/: django-test.yaml  test-and-deploy.yaml
admin_views/: __init__.py  admin.py  compat.py  conf.py  tests.py
admin_views/management/commands/: admin_views_install_templates.py
admin_views/templates/admin/: index.html
admin_views/templatetags/: admin_views.py
example_project/example_project/: settings.py  urls.py
example_project/example_project/example_app/: admin.py  models.py
example_project/example_project/example_app/migrations/: 0001_initial.py
test_project/: Pipfile
test_project/myapp/: admin.py  tests.py
test_project/myapp/migrations/: 0001_initial.py
test_project/test_project/: asgi.py  settings.py  urls.py  wsgi.py
